Se ajusta Dockerfile